; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_sequence.c_ErrorIfUnsupportedSeqStmt.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_sequence.c_ErrorIfUnsupportedSeqStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@InvalidOid = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [82 x i8] c"cannot create sequences that specify a distributed table in their OWNED BY option\00", align 1
@.str.1 = private unnamed_addr constant [101 x i8] c"Use a sequence in a distributed table by specifying a serial column type before creating any shards.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ErrorIfUnsupportedSeqStmt(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load i32, i32* @InvalidOid, align 4
  store i32 %4, i32* %3, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i64 @OptionsSpecifyOwnedBy(i32 %7, i32* %3)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %22

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i64 @IsDistributedTable(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %10
  %15 = load i32, i32* @ERROR, align 4
  %16 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %17 = call i32 @errcode(i32 %16)
  %18 = call i32 @errmsg(i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 @errhint(i8* getelementptr inbounds ([101 x i8], [101 x i8]* @.str.1, i64 0, i64 0))
  %20 = call i32 @ereport(i32 %15, i32 %19)
  br label %21

21:                                               ; preds = %14, %10
  br label %22

22:                                               ; preds = %21, %1
  ret void
}

declare dso_local i64 @OptionsSpecifyOwnedBy(i32, i32*) #1

declare dso_local i64 @IsDistributedTable(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @errhint(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
